# impedance-monitor

./: .gitignore  CLAUDE.md  README.md  environment.yml  install.py  install.sh  pyproject.toml
impedance_monitor/: main.py
impedance_monitor/acquisition/: __init__.py  base.py  eego_sdk.py  mock.py
impedance_monitor/cap_layouts/: __init__.py  ca001.py  ca200.py  ca209.py
impedance_monitor/gui/: __init__.py  head_widget.py  main_window.py
impedance_monitor/logging_session/: __init__.py  session_log.py
impedance_monitor/processing/: __init__.py  thresholds.py
tests/: test_cap_layouts.py  test_eego_sdk_backend.py  test_mock_acquisition.py  test_sdk_constants.py  test_sdk_integration.py  test_thresholds.py
