[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "impedance-monitor"
version = "0.1.0"
description = "Standalone ANT Neuro electrode impedance monitor"
requires-python = ">=3.10"
dependencies = [
    "PySide6>=6.7",
]

[project.scripts]
impedance-monitor = "impedance_monitor.main:main"

[tool.setuptools.packages.find]
where = ["."]
